--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
 
 </head>
 <body>
-    <h1>Text File Display</h1>
+    <h1>GE19241 Data structure programs</h1>
     <ul class="list">
     <li><a href="#" onclick="changeTextFile('programs/01 Operations of list using array.txt')">01 Operations of list using array</a></li>
     <li><a href="#" onclick="changeTextFile('programs/2 (a) Operations of list using linked list.txt')">2(a) Operations of list using linked list</a></li>
     <li><a href="#" onclick="changeTextFile('programs/2(b)Implementation of stack using linked list.txt')">2(b)Implementation of stack using linked list</a></li>
-    <li><a href="#" onclick="changeTextFile('https://www.youtube.com/embed/pthEPCdPLAU')">Text File 3</a></li>
+    <li><a href="#" onclick="changeTextFile('programs/2 c Implementation of queue using linked list.txt')">2(c)Implementation of queue using linked list</a></li>
     <li><a href="#" onclick="changeTextFile('programs/3(a)Stack operation using array.txt')">3(a) Stack operation using array</a></li>
     <li><a href="#" onclick="changeTextFile('programs/3(b) Queue operation using array.txt')">3(b) Queue operation using array</a></li>
+    <li><a href="#" onclick="changeTextFile('programs/4(a)(Application of linked list)Differentiation of given equation using Linked list.txt')">4(a)(Application of linked list)Differentiation of given equation using Linked list</a></li>
+    <li><a href="#" onclick="changeTextFile('programs/4(b)(Application of stack) Infix to postfix using stack.txt')">4(b)(Application of stack) Infix to postfix using stack</a></li>
+
     </ul>
     <iframe id="textFileFrame" src="programs/01 Operations of list using array.txt" scrolling="yes"></iframe>
   
