--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <li><a href="#" onclick="changeTextFile('programs/2 (a) Operations of list using linked list.txt')">2(a) Operations of list using linked list</a></li>
     <li><a href="#" onclick="changeTextFile('programs/2(b)Implementation of stack using linked list.txt')">2(b)Implementation of stack using linked list</a></li>
     <li><a href="#" onclick="changeTextFile('programs/2 c Implementation of queue using linked list.txt')">2(c)Implementation of queue using linked list</a></li>
-    <li><a href="#" onclick="changeTextFile('programs/3(a)Stack operation using array.txt')">3(a) Stack operation using array</a></li>
+    <li><a href="#" onclick="changeTextFile('programs/3(a)stack operation using array.txt')">3(a) Stack operation using array</a></li>
     <li><a href="#" onclick="changeTextFile('programs/3(b) Queue operation using array.txt')">3(b) Queue operation using array</a></li>
     <li><a href="#" onclick="changeTextFile('programs/4(a)(Application of linked list)Differentiation of given equation using Linked list.txt')">4(a)(Application of linked list)Differentiation of given equation using Linked list</a></li>
     <li><a href="#" onclick="changeTextFile('programs/4(b)(Application of stack) Infix to postfix using stack.txt')">4(b)(Application of stack) Infix to postfix using stack</a></li>
