--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <title> GE19241 Data structure record</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
 
+    <meta name="description" content="GE19241 Data structure programs">
+
+    <meta name="keywords" content="data structure, programs, array, linked list, stack, queue">
+
+    
+
+    <!-- Open Graph (OG) Tags -->
+
+    <meta property="og:title" content="GE19241 Data structure record">
+
+    <meta property="og:description" content="GE19241 Data structure programs">
+
+    <meta property="og:type" content="website">
+
+    <meta property="og:url" content="https://suriyakumar13.github.io/data-structure-in-c/#">
+
+    <meta property="og:image" content="20230602_102327.png">
 </head>
 <body>
     <h1>GE19241 Data structure programs</h1>
