--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <meta property="og:url" content="https://suriyakumar13.github.io/data-structure-in-c/#">
 
-    <meta property="og:image" content="20230602_102327.png">
+    <meta property="og:image" content="20230602_102327.png" content="Asserts/20230602_195439.jpg">
 </head>
 <body>
     <h1>GE19241 Data structure programs</h1>
