--- a/index.html
+++ b/index.html
@@ -40,40 +40,40 @@
         <li><a href="#" onclick="changeTextFile('programs/4(b)(Application of stack) Infix to postfix using stack.txt')">4(b)(Application of stack) Infix to postfix using stack</a></li>
         </ol>
        </li>
-      <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">5 Implementation and Operations of binary tree</a>
+      <li><a href="#" onclick="changeTextFile('programs/5 Implementation and Operations of binary tree.txt')">5 Implementation and Operations of binary tree</a>
       </li>
-      <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">6 Implementation of binary search tree</a>
+      <li><a href="#" onclick="changeTextFile('programs/6 Implementation of binary search tree.txt')">6 Implementation of binary search tree</a>
       </li>
-      <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">7 Implementation of AVL trees</a>
+      <li><a href="#" onclick="changeTextFile('programs/7 Implementation of AVL trees.txt')">7 Implementation of AVL trees</a>
       </li>
-      <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">8 Implementation of heaps using priority queue</a>
+      <li><a href="#" onclick="changeTextFile('programs/8 Implementation of heaps using priority queue.txt')">8 Implementation of heaps using priority queue</a>
       </li>
       <li>
         <ol type="a">
-          <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">9(a) Graph traversal BFS</a>
+          <li><a href="#" onclick="changeTextFile('programs/9(a) Graph traversal BFS.txt')">9(a) Graph traversal BFS</a>
           </li>
-          <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">9(b) Graph traversal DFS</a>
+          <li><a href="#" onclick="changeTextFile('programs/9(b) Graph traversal DFS.txt')">9(b) Graph traversal DFS</a>
           </li>
         </ol>
       </li>
       
-      <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">10 Application of graph - dijkstra's shortest path algorithm</a>
+      <li><a href="#" onclick="changeTextFile('programs/10 Application of graph - dijkstra shortest path algorithm.txt')">10 Application of graph - dijkstra's shortest path algorithm</a>
       </li>
       <li>
         <ol type="a">
-          <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">11(a) Linear search</a>
+          <li><a href="#" onclick="changeTextFile('programs/11(a) Linear search.txt')">11(a) Linear search</a>
           </li>
-          <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">11(b) Binary search</a>
+          <li><a href="#" onclick="changeTextFile('programs/11(b) Binary search.txt')">11(b) Binary search</a>
           </li>
-          <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">11(c) bubble sort</a>
+          <li><a href="#" onclick="changeTextFile('programs/11(c) bubble sort.txt')">11(c) bubble sort</a>
           </li>
-          <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">11(d) quick sort</a>
+          <li><a href="#" onclick="changeTextFile('programs/11(d) quick sort.txt')">11(d) quick sort</a>
           </li>
-          <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">11(e) merge sort</a>
+          <li><a href="#" onclick="changeTextFile('programs/11(e) merge sort.txt')">11(e) merge sort</a>
           </li>
         </ol>
       </li>
-      <li><a href="#" onclick="changeTextFile('programs/comingsoon.txt')">12 open hashing techniques</a>
+      <li><a href="#" onclick="changeTextFile('programs/12 open hashing techniques.txt')">12 open hashing techniques</a>
       </li>
     </ol>
     </*
@@ -83,7 +83,7 @@
     8 Implementation of heaps using priority queue
     9 a graph traversal BFS
       b graph traversal DFS
-    10 Application of graph - dijkstra's shortest path algorithm
+    10 Application of graph - dijkstras shortest path algorithm
     11 a linear search
        b binary search
        c bubble sort
