--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </li>
       <li>
         <ol type="a">
-        <li><a href="#" onclick="changeTextFile('programs/3(a)Stack operation using array.txt')">3(a) Stack operation using array</a></li>
+        <li><a href="#" onclick="changeTextFile('programs/3(a)stack operation using array.txt')">3(a) Stack operation using array</a></li>
         <li><a href="#" onclick="changeTextFile('programs/3(b) Queue operation using array.txt')">3(b) Queue operation using array</a></li>
         </ol>
         </li>
